<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="168dp"
        style="@style/LinearLayout"
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="ScoreKeeping App"
            style="@style/textView1"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Score1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            style="@style/textView2"/>
            />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/score_text1"
            android:inputType="textPersonName" />


        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Button1"
            tools:text="Increase the score"
            style="@style/Button"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Button2"
            tools:text="Decrease the score"
            style="@style/Button2"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >

            <RadioButton
                style="@style/RadioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton1"

                >

            </RadioButton>

            <RadioButton
                style="@style/RadioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton2">

            </RadioButton>

            <RadioButton
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton3">

            </RadioButton>



    </RadioGroup>



        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Score2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="Score2"
            style="@style/textView2"
            />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Score_text2"
            android:inputType="textPersonName" />


        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Button3"
            tools:text="Increase the score"
            style="@style/Button"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Button4"
            tools:text="Decrease the score"
            style="@style/Button2"

            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>